<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackingApp</string>
    <string name="country_prompt">Choose User Type</string>
    <string name="sign_up">SignUp</string>

    <string-array name="country_arrays">
        <item>Regular User</item>
        <item>Supervisor</item>
    </string-array>
    <string name="full_name">Full Name</string>

    <string name="email">E-mail</string>

    <string name="password">Password</string>
    <string name="password_check">Password Check</string>

    <string name="phone">Phone Number</string>

    <string name="register">Sign Up</string>

    <string name="input_error_name">name required</string>

    <string name="input_error_email">email required</string>

    <string name="input_error_password">password required</string>

    <string name="input_error_phone">phone required</string>

    <string name="input_error_password_length">password should be atleast 6 characters long</string>

    <string name="input_error_password_check">passwords must match</string>

    <string name="input_error_phone_invalid">enter a valid phone number</string>

    <string name="registration_success">Registered Successfully</string>

    <string name="input_error_email_invalid">enter a valid email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_client_map">Map</string>
    <string name="title_activity_all_clients_on_map">Map</string>
    <string name="title_activity_track_map">Map</string>
</resources>
