<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUp">
<!--    android:background="@drawable/ghost_app_background" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/app_name_size" />

        <EditText
            android:id="@+id/fullNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/full_name"
            android:nextFocusDown="@id/emailSignUp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/editTextPasswordSignUp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/editTextPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/phoneNumberSignUp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/editTextPasswordCheckSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/password_check"
            android:inputType="textPassword"
            android:nextFocusDown="@id/phoneNumberSignUp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/phoneNumberSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="10"
            android:nextFocusDown="@id/buttonSignIn"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint" />

        <Spinner
            android:id="@+id/spinnerSignUp"
            android:layout_width="379dp"
            android:layout_height="39dp"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordCheckSignUp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signUp"
            android:text="Sign Up" />


    </LinearLayout>
    <ProgressBar android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_centerVertical="true" android:id="@+id/progressBarSignIn" android:layout_centerHorizontal="true"/>

</RelativeLayout>